--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -27,28 +27,12 @@ TARGET_LINK_LIBRARIES( ${GPERFTOOLS_LIBRARIES}
 )
 endif()
 
+#-------------------------------------#
+# INSTALL
+#-------------------------------------#
 
 INSTALL_FILES(/include .hh)
 INSTALL_TARGETS(/lib utilities)
-
-#-------------------------------------#
-# PYTHON INTERFACE
-#-------------------------------------#
-
-#IF( DETRAN_ENABLE_PYTHON )
-
-#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-#SET_SOURCE_FILES_PROPERTIES(detran_utilities.i PROPERTIES CPLUSPLUS ON)
-#SWIG_ADD_MODULE(detran_utilities python detran_utilities.i )
-
-#SWIG_LINK_LIBRARIES(detran_utilities ${PYTHON_LIBRARIES} utilities)
-
-#INSTALL(FILES ${CMAKE_BINARY_DIR}/utilities/detran_utilities.py
-#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-#INSTALL(FILES ${CMAKE_BINARY_DIR}/utilities/_detran_utilities.so
-#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-
-#ENDIF()
 
 #-------------------------------------#
 # TESTING
