--- a/src/utilities/test/CMakeLists.txt
+++ b/src/utilities/test/CMakeLists.txt
@@ -17,6 +17,9 @@ TARGET_LINK_LIBRARIES(test_InputDB utilities)
 ADD_EXECUTABLE(test_MathUtilities test_MathUtilities.cc)
 TARGET_LINK_LIBRARIES(test_MathUtilities utilities)
 
+ADD_EXECUTABLE(test_Point   test_Point.cc)
+TARGET_LINK_LIBRARIES(test_Point utilities)
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
@@ -34,3 +37,5 @@ ADD_TEST( test_MathUtilities test_vec_scale 3)
 ADD_TEST( test_MathUtilities test_norm_residual_L2 4)
 ADD_TEST( test_MathUtilities test_norm_residual_L1 5)
 ADD_TEST( test_MathUtilities test_norm_residual_Linf 6)
+# Point
+ADD_TEST( test_Point         test_Point   0)
