Cleanup to SC 2D and DD 2D

--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(TRANSPORT_SRC
     Acceleration.cc
     Boundary.cc
     BoundaryMOC.cc
-    CMR.cc
+    #CMR.cc
     Equation_DD_1D.cc
     Equation_DD_2D.cc
     Equation_DD_3D.cc
