Added multigroup loss and gain operators and stub tests

--- a/src/diffusion/test/CMakeLists.txt
+++ b/src/diffusion/test/CMakeLists.txt
@@ -8,6 +8,12 @@ message( "++ Adding detran diffusion tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
+ADD_EXECUTABLE(test_GainOperator        test_GainOperator.cc)
+TARGET_LINK_LIBRARIES(test_GainOperator diffusion utilities materials geometry)
+
+ADD_EXECUTABLE(test_LossOperator        test_LossOperator.cc)
+TARGET_LINK_LIBRARIES(test_LossOperator diffusion utilities materials geometry)
+
 ADD_EXECUTABLE(test_OneGroupLossOperator        test_OneGroupLossOperator.cc)
 TARGET_LINK_LIBRARIES(test_OneGroupLossOperator diffusion utilities materials geometry)
 
@@ -15,4 +21,6 @@ TARGET_LINK_LIBRARIES(test_OneGroupLossOperator diffusion utilities materials ge
 # Define tests
 #------------------------------------------------------------------------------#
 
+ADD_TEST( test_GainOperator  	     test_GainOperator 0)
+ADD_TEST( test_LossOperator  	     test_LossOperator 0)
 ADD_TEST( test_OneGroupLossOperator  test_OneGroupLossOperator 0)
