--- a/src/diffusion/CMakeLists.txt
+++ b/src/diffusion/CMakeLists.txt
@@ -10,6 +10,8 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(SRC
     BaseOperator.cc
+    GainOperator.cc
+    LossOperator.cc
     OneGroupLossOperator.cc
 )
 
