Added several unit tests and associated fixtures.  Moved ReactionRate to post process and started a new API.

--- a/src/geometry/test/CMakeLists.txt
+++ b/src/geometry/test/CMakeLists.txt
@@ -17,6 +17,9 @@ TARGET_LINK_LIBRARIES(test_Mesh2D           geometry utilities angle)
 ADD_EXECUTABLE(test_Mesh3D                  test_Mesh3D.cc)
 TARGET_LINK_LIBRARIES(test_Mesh3D           geometry utilities angle)
 
+ADD_EXECUTABLE(test_PinCell                 test_PinCell.cc)
+TARGET_LINK_LIBRARIES(test_PinCell          geometry utilities angle)
+
 ADD_EXECUTABLE(test_Segment                 test_Segment.cc)
 TARGET_LINK_LIBRARIES(test_Segment          geometry utilities angle)
 
@@ -33,6 +36,7 @@ TARGET_LINK_LIBRARIES(test_Tracker          geometry utilities angle)
 ADD_TEST(test_Mesh1D 	      test_Mesh1D 	  0)
 ADD_TEST(test_Mesh2D 	      test_Mesh2D 	  0)
 ADD_TEST(test_Mesh3D 	      test_Mesh3D     0)
+ADD_TEST(test_PinCell         test_PinCell    0)
 ADD_TEST(test_Segment         test_Segment    0)
 ADD_TEST(test_Track           test_Track      0)
 ADD_TEST(test_Tracker_2x2     test_Tracker    0)
