--- a/src/postprocess/test/CMakeLists.txt
+++ b/src/postprocess/test/CMakeLists.txt
@@ -8,8 +8,14 @@ message( "++ Adding detran postprocess tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
-if(DETRAN_ENABLE_SILO)
+ADD_EXECUTABLE(test_ReactionRates test_ReactionRates.cc)
+TARGET_LINK_LIBRARIES(test_ReactionRates postprocess 
+                                      	 geometry 
+                                         materials 
+                                         transport 
+                                         utilities)
 
+if(DETRAN_ENABLE_SILO)
 ADD_EXECUTABLE(test_SiloOutput test_SiloOutput.cc)
 TARGET_LINK_LIBRARIES(test_SiloOutput postprocess 
                                       geometry 
@@ -23,8 +29,8 @@ endif()
 # Define tests
 #------------------------------------------------------------------------------#
 
+ADD_TEST( test_ReactionRates  test_ReactionRates 0)
+
 if(DETRAN_ENABLE_SILO)
-
 ADD_TEST( test_SiloOutput  test_SiloOutput 0)
-
 endif()
