Initial add of HDF5 to build system.  Added map size getters in InputDB.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,6 +94,16 @@ if( DETRAN_ENABLE_SILO)
   endif()
 endif()
 
+if( DETRAN_ENABLE_HDF5)
+  find_package(HDF5)
+  if(HDF5_FOUND)
+    include_directories(${HDF5_INCLUDE_DIRS})
+  else()
+      set( DETRAN_ENABLE_HDF5 OFF )
+      MESSAGE( STATUS "Disabling HDF5 since it was not found." )
+  endif()
+endif()
+
 # This is a hack for now.  Probably worth generating a CMake finder thing.
 IF( DETRAN_ENABLE_GPERFTOOLS )
   set(GPERFTOOLS_LIBRARIES "/home/robertsj/opt/gperftools/lib/libprofiler.so")
@@ -250,6 +260,11 @@ if( DETRAN_ENABLE_SILO )
 message("++++ Silo:        enabled")
 else()
 message("++++ Silo:        disabled")
+endif()
+if( DETRAN_ENABLE_HDF5 )
+message("++++ HDF5:        enabled")
+else()
+message("++++ HDF5:        disabled")
 endif()
 if( DETRAN_ENABLE_TEST )
 message("++++ Testing:     enabled")
