--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(UTILITIES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET( UTILITIES_SRC 
   InputDB.cc
+  IO_HDF5.cc
   GenException.cc
   Warning.cc
 )
