Added initial HDF5 material write via the IO_HDF5 interface.  Also added D and SigmaA builder to Material.

--- a/src/ioutils/test/CMakeLists.txt
+++ b/src/ioutils/test/CMakeLists.txt
@@ -19,4 +19,5 @@ endif (DETRAN_ENABLE_HDF5)
 # Define tests
 #------------------------------------------------------------------------------#
 
-ADD_TEST( test_IO_HDF5       test_IO_HDF5   0)
+ADD_TEST( test_IO_HDF5_input       test_IO_HDF5   0)
+ADD_TEST( test_IO_HDF5_material    test_IO_HDF5   1)
