--- a/src/drivers/test/CMakeLists.txt
+++ b/src/drivers/test/CMakeLists.txt
@@ -9,9 +9,18 @@ message( "++ Adding detran drivers tests." )
 #------------------------------------------------------------------------------#
 
 ADD_EXECUTABLE(test_StupidParser test_StupidParser.cc)
-TARGET_LINK_LIBRARIES(test_StupidParser drivers utilities geometry materials transport)
+TARGET_LINK_LIBRARIES(test_StupidParser 
+                      drivers 
+                      utilities 
+                      geometry 
+                      materials 
+                      transport
+                      ioutils)
 
 INSTALL(FILES ${CMAKE_SOURCE_DIR}/drivers/test/test.inp
+        DESTINATION ${CMAKE_BINARY_DIR}/drivers/test/)
+        
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/drivers/test/test.h5
         DESTINATION ${CMAKE_BINARY_DIR}/drivers/test/)
 
 #------------------------------------------------------------------------------#
@@ -19,4 +28,5 @@ INSTALL(FILES ${CMAKE_SOURCE_DIR}/drivers/test/test.inp
 #------------------------------------------------------------------------------#
 
 # StupidParser
-#ADD_TEST( test_Testing_pass  test_Testing 0)
+ADD_TEST(test_StupidParser       test_StupidParser 0)
+ADD_TEST(test_StupidParser_hdf5  test_StupidParser 1)
