--- a/src/transport/test/CMakeLists.txt
+++ b/src/transport/test/CMakeLists.txt
@@ -34,6 +34,13 @@ TARGET_LINK_LIBRARIES(test_Sweeper2D        transport geometry materials utiliti
 ADD_EXECUTABLE(test_Sweeper3D               test_Sweeper3D.cc)
 TARGET_LINK_LIBRARIES(test_Sweeper3D        transport ioutils)
 
+# ACCELERATION
+
+ADD_EXECUTABLE(test_CoarseMesh              test_CoarseMesh.cc)
+TARGET_LINK_LIBRARIES(test_CoarseMesh       transport)
+
+ADD_EXECUTABLE(test_CurrentTally            test_CurrentTally.cc)
+TARGET_LINK_LIBRARIES(test_CurrentTally     transport)
 
 #------------------------------------------------------------------------------#
 # Define tests
@@ -45,3 +52,5 @@ ADD_TEST(test_State_basic          test_State           0)
 ADD_TEST(test_Sweeper2D_basic      test_Sweeper2D       0)
 ADD_TEST(test_Sweeper3D_basic      test_Sweeper3D       0)
 ADD_TEST(test_BoundaryMOC          test_BoundaryMOC     0)
+ADD_TEST(test_CoarseMesh           test_CoarseMesh      0)
+ADD_TEST(test_CurrentTally_1D      test_CurrentTally    0)
