Tested 3d current tally.  Refactored the tally so that it is clean.  However, there may still be yet performance things to improve with respect to indexing.

--- a/src/transport/test/CMakeLists.txt
+++ b/src/transport/test/CMakeLists.txt
@@ -54,3 +54,5 @@ ADD_TEST(test_Sweeper3D_basic      test_Sweeper3D       0)
 ADD_TEST(test_BoundaryMOC          test_BoundaryMOC     0)
 ADD_TEST(test_CoarseMesh           test_CoarseMesh      0)
 ADD_TEST(test_CurrentTally_1D      test_CurrentTally    0)
+ADD_TEST(test_CurrentTally_2D      test_CurrentTally    1)
+ADD_TEST(test_CurrentTally_3D      test_CurrentTally    2)
