--- a/src/material/CMakeLists.txt
+++ b/src/material/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_LIBRARY(materials
 )
 TARGET_LINK_LIBRARIES( materials
                        utilities
-                       ${GPERFTOOLS_LIBRARIES}                       
+                       ${Boost_LIBRARIES}                     
 )
 
 INSTALL_FILES(/include .hh)
