Added flag for boost in serialization tests

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -49,6 +49,7 @@ TARGET_LINK_LIBRARIES( detran
                        angle
                        geometry
                        utilities
+                       ioutils
 )
 
 INSTALL_FILES(/include .hh)
